# Narada

./: Brewfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agenticSeek/: Makefile  README.md  setup.py
agenticSeek/src/agentic_seek/: __init__.py  cli.py  codex_assistant.py  llm_adapter.py  reasoning.py
agenticSeek/tests/: test_cli.py  test_codex_assistant.py  test_llm_adapter.py
docs/: CHANGELOG.md  REFERENCE.md  ROADMAP.md  architecture.md  packaging_macOS.md
scripts/: install.sh  setup_local_llm.sh
src/agentic_seek/: __init__.py  codex_assistant.py  llm_adapter.py  main.py  reasoning.py
src/narada/: __init__.py  main.py  reasoning.py
tests/: test_agentic_seek.py  test_reasoning.py
