[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-seek"
version = "0.1.0"
authors = [{name = "AgenticSeek Team"}]
description = "Offline reasoning assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "flake8", "pydoc-markdown"]
mac = ["pync"]

[project.scripts]
agentic-seek = "agentic_seek:run_cli"
